--- a/ProfileGenerator/ProfileGenerator.vcxproj
+++ b/ProfileGenerator/ProfileGenerator.vcxproj
@@ -163,6 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="BlazeEngineProjectPropertySheet.props" />
+    <None Include="defaultProfile.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
