--- a/ProfileGenerator/ProfileGenerator.vcxproj.filters
+++ b/ProfileGenerator/ProfileGenerator.vcxproj.filters
@@ -37,5 +37,6 @@
     <None Include="BlazeEngineProjectPropertySheet.props">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="defaultProfile.json" />
   </ItemGroup>
 </Project>
