--- a/FluidSimulationProject/BlazeEngineProjectPropertySheet.props
+++ b/FluidSimulationProject/BlazeEngineProjectPropertySheet.props
@@ -2,7 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
-    <BlazeDir>C:\Users\filip\source\repos\BlazeEngine\</BlazeDir>
+    <BlazeDir>D:\Programming\Projects\BlazeEngine\</BlazeDir>
   </PropertyGroup>
   <PropertyGroup>
     <OutDir>$(ProjectDir)build\$(Configuration)\$(PlatformTarget)\</OutDir>
