--- a/FluidSimulationProject/FluidSimulationProject.vcxproj
+++ b/FluidSimulationProject/FluidSimulationProject.vcxproj
@@ -219,6 +219,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\simulationProfiles\increasingBoxSizeProfiles.json" />
+    <None Include="assets\simulationProfiles\increasingReorderTimeIntervalProfiles.json" />
+    <None Include="assets\simulationProfiles\waveDetailedProfilingProfile.json" />
+    <None Include="assets\simulationProfiles\waveIncreasingParticleReorderTimeIntervalDetailedProfilingProfiles.json" />
     <None Include="assets\simulationProfiles\waveProfile.json" />
     <None Include="BlazeEngineProjectPropertySheet.props" />
     <None Include="assets\kernels\SPH.cl" />
