--- a/FluidSimulationProject/FluidSimulationProject.vcxproj
+++ b/FluidSimulationProject/FluidSimulationProject.vcxproj
@@ -220,6 +220,7 @@
   <ItemGroup>
     <None Include="assets\simulationProfiles\increasingBoxSizeProfiles.json" />
     <None Include="assets\simulationProfiles\increasingReorderTimeIntervalProfiles.json" />
+    <None Include="assets\simulationProfiles\increasingStaticParticleCountProfiles.json" />
     <None Include="assets\simulationProfiles\waveDetailedProfilingProfile.json" />
     <None Include="assets\simulationProfiles\waveIncreasingParticleReorderTimeIntervalDetailedProfilingProfiles.json" />
     <None Include="assets\simulationProfiles\waveProfile.json" />
@@ -234,6 +235,8 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="outputs\log.txt" />
+    <Text Include="outputs\waveRandomHash.txt" />
+    <Text Include="outputs\waveZ-curveHash.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
