Added interface for future implementation of CL GL interop and reorganized file structure

--- a/SPHFluidSimulation/SPHFluidSimulation.vcxproj
+++ b/SPHFluidSimulation/SPHFluidSimulation.vcxproj
@@ -299,12 +299,11 @@ call "$(BlazeDir)scripts\ResourceToCPP.exe" resourceToCPP src="$(ProjectDir)sour
     <ClCompile Include="source\SPH\ParticleBufferManager\OpenCLResourceLock.cpp" />
     <ClCompile Include="source\SPH\ParticleBufferManager\RenderableCPUParticleBufferManager.cpp" />
     <ClCompile Include="source\SPH\ParticleBufferManager\RenderableGPUParticleBufferManager.cpp" />
-    <ClCompile Include="source\SPH\ParticleBufferManager\ResourceLockGuard.cpp" />
+    <ClCompile Include="source\SPH\Core\ResourceLockGuard.cpp" />
     <ClCompile Include="source\SPH\ParticleSetBlueprint\BoxShellParticleSetBlueprint.cpp" />
     <ClCompile Include="source\SPH\ParticleSetBlueprint\FilledBoxParticleSetBlueprint.cpp" />
-    <ClCompile Include="source\SPH\ParticleSetBlueprint\ParticleSetBlueprint.cpp" />
-    <ClCompile Include="source\SPH\Scene\Scene.cpp" />
-    <ClCompile Include="source\SPH\System\System.cpp" />
+    <ClCompile Include="source\SPH\Core\Scene.cpp" />
+    <ClCompile Include="source\SPH\Core\System.cpp" />
     <ClCompile Include="source\SPH\System\SystemCPU.cpp" />
     <ClCompile Include="source\SPH\System\SystemGPU.cpp" />
     <ClCompile Include="source\SPH\ThreadParallelTaskManager.cpp" />
@@ -316,21 +315,21 @@ call "$(BlazeDir)scripts\ResourceToCPP.exe" resourceToCPP src="$(ProjectDir)sour
     <ClInclude Include="include\SPH\ParticleBufferManager\OfflineCPUParticleBufferManager.h" />
     <ClInclude Include="include\SPH\ParticleBufferManager\OfflineGPUParticleBufferManager.h" />
     <ClInclude Include="include\SPH\ParticleBufferManager\OpenCLResourceLock.h" />
-    <ClInclude Include="include\SPH\ParticleBufferManager\ParticleBufferManager.h" />
-    <ClInclude Include="include\SPH\ParticleBufferManager\ParticleBufferManagerRenderData.h" />
+    <ClInclude Include="include\SPH\Core\ParticleBufferManager.h" />
+    <ClInclude Include="include\SPH\Core\ParticleBufferManagerRenderData.h" />
     <ClInclude Include="include\SPH\ParticleBufferManager\RenderableCPUParticleBufferManager.h" />
     <ClInclude Include="include\SPH\ParticleBufferManager\RenderableGPUParticleBufferManager.h" />
-    <ClInclude Include="include\SPH\ParticleBufferManager\ResourceLockGuard.h" />
+    <ClInclude Include="include\SPH\Core\ResourceLockGuard.h" />
     <ClInclude Include="include\SPH\ParticleSetBlueprint\BoxShellParticleSetBlueprint.h" />
     <ClInclude Include="include\SPH\ParticleSetBlueprint\FilledBoxParticleSetBlueprint.h" />
-    <ClInclude Include="include\SPH\ParticleSetBlueprint\ParticleSetBlueprint.h" />
-    <ClInclude Include="include\SPH\System\Particles.h" />
+    <ClInclude Include="include\SPH\Core\ParticleSetBlueprint.h" />
+    <ClInclude Include="include\SPH\Core\Particles.h" />
     <ClInclude Include="source\SPH\Graphics\Shaders\Shaders.h" />
     <ClInclude Include="source\SPH\Kernels\CompatibilityHeaderC++.h" />
     <ClInclude Include="source\SPH\Kernels\CompatibilityHeaderOpenCL.cl" />
     <ClInclude Include="source\SPH\Kernels\SPHFunctions.h" />
-    <ClInclude Include="include\SPH\Scene\Scene.h" />
-    <ClInclude Include="include\SPH\System\System.h" />
+    <ClInclude Include="include\SPH\Core\Scene.h" />
+    <ClInclude Include="include\SPH\Core\System.h" />
     <ClInclude Include="include\SPH\System\SystemCPU.h" />
     <ClInclude Include="include\SPH\System\SystemGPU.h" />
     <ClInclude Include="include\SPH\ThreadParallelTaskManager.h" />
